--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -40,7 +40,7 @@
 	<h1 class="second-title">Предложния по перевозке</h1>
 
 	<div class="main-wrap column">
-		<form class="filter row" method="post">
+		<form class="filter row" method="post" action="/searchTesk">
 			<label>
 				<span>Откуда</span>
 				<input type="text" name="from" placeholder="Город">
