templates are ready//

--- a/public/bar.html
+++ b/public/bar.html
@@ -3,7 +3,7 @@
     <img src="images/cancel.png" width="25px" onclick="closeMenu()">
   </div>
   <nav class="nav-bar column">
-    <li><a href="/" class="underline">Главная</a></li>
+    <li><a href="/">Главная</a></li>
     <li><a href="/products">Поставщики</a></li>
     <li><a href= "/about">О нас</a></li>
   </nav>
