--- a/public/home.html
+++ b/public/home.html
@@ -27,9 +27,9 @@
 			<div class="number row">
 				<img src="images/phone.png" width="30px">
 				<span>8 (800) 555 35 35</span>
-				<button id="signIn">Вход</button>
-				<button id="signUp">Регистрация</button>
-				<img src="images/burger.png" id="opener" width="25px">
+				<button id="signIn" onclick="Log('#auto')">Вход</button>
+				<button id="signUp" onclick="Log('#reg')">Регистрация</button>
+				<img src="images/burger.png" id="opener" width="25px" onclick="openMenu()">
 			</div>
 		</div>
 
