--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Concert+One|Roboto" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script></head>
-<body>
+<body onmouseout="hideProfile('.profile')">
 
 	<!-- Navigation bar -->
 	<div class="bar column"></div>
@@ -16,25 +16,29 @@
 	<div class="hover"></div>
 
 	<div class="header row black">
-		<div class="title column">
-			<a href="index.html"><h2>LogicSySKartli</h2></a>
-			<span>Биржа грузоперевозок</span>
-		</div>
 
-		<div class="number row">
-			<img src="images/phone-sec.png" width="30px">
-			<span>8 (800) 555 35 35</span>
-			<div class="profile-wrap column">
-				<a href="profile-company.html"><img src="images/profile.png" id="profile-opener" width="32px"></a>
-				<div class="profile column">
-						<span>Имя Фамилия</span>
-						<span>Банк</span>
-						<button>Настройки</button>
-						<button type="submit">Выход</button>
-				</div>
-			</div>
-			<img src="images/burger.png" id="opener" width="25px">
-		</div>
+	</div>
+
+	<!-- PopUp windows -->
+	<div class="pop-wrap column" id="auto">
+		<h2>Авторизация</h2>
+		<form method="post" class="column" name="login" action="/login">
+			<input type="text" name="username" placeholder="Введите имя">
+			<input type="password" name="password" placeholder="Введите пароль" >
+			<span class="alert"></span>
+			<input type="checkbox" name="remember">
+			<input type="submit" name="signIn" value="Войти">
+		</form>
+	</div>
+
+	<div class="pop-wrap column" id="reg" name="sign-up">
+		<h2>Регистрация</h2>
+		<form method="post" class="column" name="sign-up" action="/signup" >
+			<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
+			<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
+			<span class="alert"></span>
+			<input type="submit" name="signUp" value="Зарегистрироваться">
+		</form>
 	</div>
 
 	<h1 class="second-title">Предложния по перевозке</h1>
