--- a/public/profile-company.html
+++ b/public/profile-company.html
@@ -14,28 +14,10 @@
 	<!-- Navigation bar -->
 	<div class="bar column"></div>
 
-	<div class="hover"></div>
+	<div class="hover" onmouseout="hideProfile('.profile')"></div>
 
 	<div class="header row black">
-		<div class="title column">
-			<a href="index.html"><h2>LogicSySKartli</h2></a>
-			<span>Биржа грузоперевозок</span>
-		</div>
 
-		<div class="number row">
-			<img src="images/phone-sec.png" width="30px">
-			<span>8 (800) 555 35 35</span>
-			<div class="profile-wrap column">
-				<a href=""><img src="images/profile.png" id="profile-opener" width="32px"></a>
-				<div class="profile column">
-						<span>Имя Фамилия</span>
-						<span>Банк</span>
-						<button>Настройки</button>
-						<button>Выход</button>
-				</div>
-			</div>
-			<img src="images/burger.png" id="opener" width="25px">
-		</div>
 	</div>
 
 	<h1 class="second-title">Личный кабинет</h1>
