added bank, and loading info from bd to /profile

--- a/public/login-header.html
+++ b/public/login-header.html
@@ -8,9 +8,8 @@
   <span>8 (800) 555 35 35</span>
   <div class="profile-wrap column" onmouseover="dropProfile('.profile')">
     <a href="/profile"><img src="images/profile.png" width="32px"></a>
+    <span>Личный кабинет</span>
     <div class="profile column">
-        <span>Имя Фамилия</span>
-        <span>Банк</span>
         <button>Настройки</button>
         <button type="submit" onclick="LogOut()">Выход</button>
     </div>
