--- a/public/profile-company.html
+++ b/public/profile-company.html
@@ -30,6 +30,11 @@
 				<input type="text" name="surname" placeholder="Введите фамилию">
 				<input type="text" name="fathername" placeholder="Введите отчество">
 				<input type="text" name="phonenumber" placeholder="+7 (917) 222 22 22">
+				<div class="row">
+					<span>Счет:</span>
+					<span>0$</span>
+					<button type="button" name="button" class="cancel">Пополнить</button>
+				</div>
 				<div class="btn-wrap">
 					<input type="submit" name="saver" value="Сохранить" class="disabled-btn" disabled>
 				</div>
@@ -40,13 +45,13 @@
 			<h2>Данные для авторизации в сервисе</h2>
 			<div class="row" id="row-f">
 				<span>Пароль</span>
-				<span>******</span>
+				<span id="pass-span">******</span>
 				<span class="changer" onclick="openHider(this)">Изменить</span>
 
 				<form class="put-add column hidden" method="post" action="/" id="pass-form-change">
-					<input type="password" name="oldpassword" placeholder="Введите текущий пароль">
-					<input type="password" name="newpass1" placeholder="Введите новый пароль">
-					<input type="password" name="newpassword" placeholder="Подтвердите пароль">
+					<input type="password" name="cur-pass" placeholder="Введите текущий пароль">
+					<input type="password" name="new-pass" placeholder="Введите новый пароль">
+					<input type="password" name="accept-pass" placeholder="Подтвердите пароль">
 					<span class="alert"></span>
 					<div class="btn-wrap">
 						<input type="submit" name="change-password-btn" value="Сохранить" class="disabled-btn" id="btn-saver-pass" disabled>
@@ -58,12 +63,12 @@
 
 			<div class="row" id="row-s">
 				<span>E-mail</span>
-				<span>sobaka@gmail.com</span>
+				<span id="email-span">sobaka@gmail.com</span>
 				<span class="changer" onclick="openHider(this)">Изменить</span>
 
 				<form class="put-add column hidden" method="post" action="" id="email-form-change">
 					<span>Ваш старый email : sobaka@gmail.com</span>
-					<input type="text" name="newemail" placeholder="Введите новый email">
+					<input type="text" name="new-email" placeholder="Введите новый email">
 					<div class="btn-wrap ">
 						<input type="submit" name="change-email-btn" value="Сохранить" class="disabled-btn" id="btn-saver-email" disabled>
 						<div class="cancel" onclick="cancelHider(this)">Отмена</div>
