--- a/public/home.html
+++ b/public/home.html
@@ -54,10 +54,19 @@
 			<form method="post" class="column" name="sign-up" action="/signup" >
 				<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
 				<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
+				<label>
+					<input type="radio" name="typer">
+					<span>Поставщик</span>
+				</label>
+				<label>
+					<input type="radio" checked name="typer">
+					<span>Клиент</span>
+				</label>
 				<span class="alert"></span>
 				<input type="submit" name="signUp" value="Зарегистрироваться">
 			</form>
 		</div>
+
 	</div>
 	<div class="feedback column">
 		<h2>Обратная связь</h2>
