--- a/public/login-header.html
+++ b/public/login-header.html
@@ -6,10 +6,10 @@
 <div class="number row">
   <img src="images/phone-sec.png" width="30px">
   <span>8 (800) 555 35 35</span>
-  <div class="profile-wrap column" onmouseover="dropProfile('.profile')">
-    <a href="/profile"><img src="images/profile.png" width="32px"></a>
+  <div class="profile-wrap column">
+    <a href="/profile" onmouseover="dropProfile('.profile')"><img src="images/profile.png" width="32px"></a>
     <span>Личный кабинет</span>
-    <div class="profile column">
+    <div class="profile column" onmouseleave="hideProfile('.profile')">
         <button>Настройки</button>
         <button type="submit" onclick="LogOut()">Выход</button>
     </div>
