--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Concert+One|Roboto" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script></head>
-<body onmouseout="hideProfile('.profile')">
+<body>
 
 	<!-- Navigation bar -->
 	<div class="bar column"></div>
@@ -36,6 +36,14 @@
 		<form method="post" class="column" name="sign-up" action="/signup" >
 			<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
 			<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
+			<label>
+				<input type="radio" name="typer">
+				<span>Поставщик</span>
+			</label>
+			<label>
+				<input type="radio" checked name="typer">
+				<span>Клиент</span>
+			</label>
 			<span class="alert"></span>
 			<input type="submit" name="signUp" value="Зарегистрироваться">
 		</form>
