changed site to polimers , added bank to header profile, changed profile-company.html

--- a/public/header.html
+++ b/public/header.html
@@ -1,6 +1,6 @@
 <div class="title column">
   <a href="/"><h2>LogicSySKartli</h2></a>
-  <span>Биржа грузоперевозок</span>
+  <span>Биржа Полимеров</span>
 </div>
 
 <div class="number row">
