--- a/public/home.html
+++ b/public/home.html
@@ -21,7 +21,7 @@
 		<div class="header row">
 			<div class="title column">
 				<a href="/"><h2>LogicSySKartli</h2></a>
-				<span>Биржа грузоперевозок</span>
+				<span>Биржа полимеров</span>
 			</div>
 
 			<div class="number row">
@@ -34,8 +34,8 @@
 		</div>
 
 		<!-- content -->
-		<h1>Биржа грузоперевозок</h1>
-		<span>Данная система, объединяет перевозчиков и отправителей грузов.</span>
+		<h1>Биржа полимеров</h1>
+		<span class="subtile">Данная система, поможет вам найти качественную полмерную продукцию по выгодным ценам, либо продать ее быстро и удобно.</span>
 
 		<!-- PopUp windows -->
 		<div class="pop-wrap column" id="auto">
@@ -55,12 +55,12 @@
 				<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
 				<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
 				<label>
-					<input type="radio" name="typer">
 					<span>Поставщик</span>
+					<input type="radio" name="typer">
 				</label>
 				<label>
-					<input type="radio" checked name="typer">
 					<span>Клиент</span>
+					<input type="radio" checked name="typer">
 				</label>
 				<span class="alert"></span>
 				<input type="submit" name="signUp" value="Зарегистрироваться">
