--- a/public/login-header.html
+++ b/public/login-header.html
@@ -1,6 +1,6 @@
 <div class="title column">
   <a href="/products"><h2>LogicSySKartli</h2></a>
-  <span>Биржа грузоперевозок</span>
+  <span>Биржа полимеров</span>
 </div>
 
 <div class="number row">
@@ -8,8 +8,9 @@
   <span>8 (800) 555 35 35</span>
   <div class="profile-wrap column">
     <a href="/profile" onmouseover="dropProfile('.profile')"><img src="images/profile.png" width="32px"></a>
-    <span>Личный кабинет</span>
+    <span onclick="dropProfile('.profile')">Личный кабинет</span>
     <div class="profile column" onmouseleave="hideProfile('.profile')">
+        <span id="bank"></span>
         <button>Настройки</button>
         <button type="submit" onclick="LogOut()">Выход</button>
     </div>
