--- a/public/product-list.html
+++ b/public/product-list.html
@@ -71,7 +71,7 @@
 			</label>
 			<label>
 				<span>Стоимость</span>
-				<input type="text" name="priсe" placeholder="$">
+				<input type="text" name="prise" placeholder="$">
 			</label>
 			<input type="submit" name="search" value="Найти">
 		</form>
