--- a/public/home.html
+++ b/public/home.html
@@ -21,21 +21,21 @@
 		<div class="header row">
 			<div class="title column">
 				<a href="/"><h2>LogicSySKartli</h2></a>
-				<span>Биржа грузоперевозок</span>
+				<span>Биржа полимеров</span>
 			</div>
 
 			<div class="number row">
 				<img src="images/phone.png" width="30px">
 				<span>8 (800) 555 35 35</span>
-				<button id="signIn">Вход</button>
-				<button id="signUp">Регистрация</button>
-				<img src="images/burger.png" id="opener" width="25px">
+				<button id="signIn" onclick="Log('#auto')">Вход</button>
+				<button id="signUp" onclick="Log('#reg')">Регистрация</button>
+				<img src="images/burger.png" id="opener" width="25px" onclick="openMenu()">
 			</div>
 		</div>
 
 		<!-- content -->
-		<h1>Биржа грузоперевозок</h1>
-		<span>Данная система, объединяет перевозчиков и отправителей грузов.</span>
+		<h1>Биржа полимеров</h1>
+		<span class="subtile">Данная система, поможет вам найти качественную полмерную продукцию по выгодным ценам, либо продать ее быстро и удобно.</span>
 
 		<!-- PopUp windows -->
 		<div class="pop-wrap column" id="auto">
@@ -44,7 +44,10 @@
 				<input type="text" name="username" placeholder="Введите имя">
 				<input type="password" name="password" placeholder="Введите пароль" >
 				<span class="alert"></span>
+				<label>
+					<span>Запомнить меня</span>
 				<input type="checkbox" name="remember">
+			</label>
 				<input type="submit" name="signIn" value="Войти">
 			</form>
 		</div>
@@ -54,10 +57,19 @@
 			<form method="post" class="column" name="sign-up" action="/signup" >
 				<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
 				<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
+				<label>
+					<span>Поставщик</span>
+					<input type="radio" name="typer">
+				</label>
+				<label>
+					<span>Клиент</span>
+					<input type="radio" checked name="typer">
+				</label>
 				<span class="alert"></span>
 				<input type="submit" name="signUp" value="Зарегистрироваться">
 			</form>
 		</div>
+
 	</div>
 	<div class="feedback column">
 		<h2>Обратная связь</h2>
