//searching api added

--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -60,9 +60,9 @@
 			<label>
 				<span>Название полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="" id="select-name" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerName" id="select-name" placeholder="Выберите название" onblur="selectClose(this)">
 					<div class="option-group column">
-						<div class="option">Имя 1</div>
+						<div class="option">АБС (ABS) 3432</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
@@ -73,9 +73,9 @@
 			<label>
 				<span>Тип полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="" id="select-type" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerType" id="select-type" placeholder="Выберите название" onblur="selectClose(this)">
 					<div class="option-group column">
-						<div class="option">Имя 1</div>
+						<div class="option">АБС-пластик</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
@@ -86,9 +86,9 @@
 			<label>
 				<span>Область применения полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="" id="select-oblast" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerUsing" id="select-oblast" placeholder="Выберите название" onblur="selectClose(this)">
 					<div class="option-group column">
-						<div class="option">Имя 1</div>
+						<div class="option">авто</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
@@ -99,9 +99,9 @@
 			<label>
 				<span>Цвет полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="" id="select-color" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerColor" id="select-color" placeholder="Выберите название" onblur="selectClose(this)">
 					<div class="option-group column">
-						<div class="option">Имя 1</div>
+						<div class="option">синий</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
 						<div class="option">Имя 2</div>
