--- a/public/home.html
+++ b/public/home.html
@@ -59,11 +59,11 @@
 				<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
 				<label>
 					<span>Поставщик</span>
-					<input type="radio" name="typer">
+					<input type="radio" name="typer" value = "1">
 				</label>
 				<label>
 					<span>Клиент</span>
-					<input type="radio" checked name="typer">
+					<input type="radio" checked name="typer" value= "2">
 				</label>
 				<span class="alert"></span>
 				<input type="submit" name="signUp" value="Зарегистрироваться">
