//provider and client registration

--- a/public/profile-company.html
+++ b/public/profile-company.html
@@ -75,6 +75,7 @@
 				<form class="put-add column hidden" method="post" action="/updatepassword" id="email-form-change">
 					<span>Ваш старый email : sobaka@gmail.com</span>
 					<input type="text" name="newemail" placeholder="Введите новый email">
+					<span class="alert"></span>
 					<div class="btn-wrap ">
 						<input type="submit" name="change-email-btn" value="Сохранить" class="disabled-btn" id="btn-saver-email" disabled>
 						<div class="cancel" onclick="cancelHider(this)">Отмена</div>
