//profile email view

--- a/public/profile-company.html
+++ b/public/profile-company.html
@@ -73,7 +73,7 @@
 				<span class="changer" onclick="openHider(this)">Изменить</span>
 
 				<form class="put-add column hidden" method="post" action="/updatepassword" id="email-form-change">
-					<span>Ваш старый email : sobaka@gmail.com</span>
+					<span id ="emailold-span">Ваш старый email : sobaka@gmail.com</span>
 					<input type="text" name="newemail" placeholder="Введите новый email">
 					<span class="alert"></span>
 					<div class="btn-wrap ">
