--- a/public/home.html
+++ b/public/home.html
@@ -46,7 +46,7 @@
 				<span class="alert"></span>
 				<label>
 					<span>Запомнить меня</span>
-				<input type="checkbox" name="remember">
+				<input type="checkbox" name="remember" value= true>
 			</label>
 				<input type="submit" name="signIn" value="Войти">
 			</form>
