--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -112,8 +112,8 @@
 			<input type="button" name="search" value="Найти">
 		</form>
 
-		<div class="list-wrap column">
-			<div class="row">
+		<div class="list-wrap column"id =productlist  >
+			<div class="row" >
 				<span>Компания</span>
 				<span>Маршрут</span>
 				<span>Грузоподъемность</span>
