--- a/public/bar.html
+++ b/public/bar.html
@@ -4,7 +4,7 @@
   </div>
   <nav class="nav-bar column">
     <li><a href="/">Главная</a></li>
-    <li><a href="/products">Поставщики</a></li>
+    <li><a href="/products">Список продукции</a></li>
     <li><a href= "/about">О нас</a></li>
   </nav>
   <div class="bar-footer column">
