--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -36,14 +36,6 @@
 		<form method="post" class="column" name="sign-up" action="/signup" >
 			<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
 			<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
-			<label>
-				<span>Поставщик</span>
-				<input type="radio" name="typer">
-			</label>
-			<label>
-				<span>Клиент</span>
-				<input type="radio" checked name="typer">
-			</label>
 			<span class="alert"></span>
 			<input type="submit" name="signUp" value="Зарегистрироваться">
 		</form>
@@ -58,9 +50,9 @@
 		<form class="filter row" method="post" name="search-filter">
 
 			<label>
-				<span>Название полимера</span>
+				<span>Марка полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="polymerName" id="select-name" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerName" id="select-name" placeholder="Выберите марку" onblur="selectClose(this)">
 					<div class="option-group column">
 						<div class="option">АБС (ABS) 3432</div>
 						<div class="option">Имя 2</div>
@@ -73,7 +65,7 @@
 			<label>
 				<span>Тип полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="polymerType" id="select-type" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerType" id="select-type" placeholder="Выберите тип" onblur="selectClose(this)">
 					<div class="option-group column">
 						<div class="option">АБС-пластик</div>
 						<div class="option">Имя 2</div>
@@ -86,7 +78,7 @@
 			<label>
 				<span>Область применения полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="polymerUsing" id="select-oblast" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerUsing" id="select-oblast" placeholder="Выберите область применения" onblur="selectClose(this)">
 					<div class="option-group column">
 						<div class="option">авто</div>
 						<div class="option">Имя 2</div>
@@ -99,7 +91,7 @@
 			<label>
 				<span>Цвет полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
-					<input type="text" name="polymerColor" id="select-color" placeholder="Выберите название" onblur="selectClose(this)">
+					<input type="text" name="polymerColor" id="select-color" placeholder="Выберите цвет" onblur="selectClose(this)">
 					<div class="option-group column">
 						<div class="option">синий</div>
 						<div class="option">Имя 2</div>
@@ -114,12 +106,25 @@
 
 		<div class="list-wrap column"id =productlist  >
 			<div class="row" >
-				<span>Компания</span>
-				<span>Маршрут</span>
-				<span>Грузоподъемность</span>
-				<span>Цена</span>
+				<span>Марка полимера</span>
+				<span>Поставщик полимера</span>
+				<span>Цена полимера</span>
+				<span>Область применения полимера</span>
+				<span>Цвет полимера</span>
+			</div>
+			<div class="row polimers-row">
+				<span>Марка полимера</span>
+				<span>Поставщик полимера</span>
+				<span>Цена полимера</span>
+				<span>Область применения полимера</span>
+				<span>Цвет полимера</span>
+				<button type="button" name="button" class="buy">Приобрести</button>
 			</div>
 		</div>
+	</div>
+
+	<div class="pop-wrap buyer-class column" id="buyer">
+		<h2>Успешно</h2>
 	</div>
 
 </body>
