//front end updates

--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -53,12 +53,7 @@
 				<span>Марка полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
 					<input type="text" name="polymerName" id="select-name" placeholder="Выберите марку" onblur="selectClose(this)">
-					<div class="option-group column">
-						<div class="option">АБС (ABS) 3432</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
+					<div class="option-group column" id="marks">
 					</div>
 				</div>
 			</label>
@@ -66,12 +61,7 @@
 				<span>Тип полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
 					<input type="text" name="polymerType" id="select-type" placeholder="Выберите тип" onblur="selectClose(this)">
-					<div class="option-group column">
-						<div class="option">АБС-пластик</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
+					<div class="option-group column" id="types">
 					</div>
 				</div>
 			</label>
@@ -79,12 +69,7 @@
 				<span>Область применения полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
 					<input type="text" name="polymerUsing" id="select-oblast" placeholder="Выберите область применения" onblur="selectClose(this)">
-					<div class="option-group column">
-						<div class="option">авто</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
+					<div class="option-group column" id="using">
 					</div>
 				</div>
 			</label>
@@ -92,12 +77,8 @@
 				<span>Цвет полимера</span>
 				<div class="select-group row" onclick="selectOpen(this)">
 					<input type="text" name="polymerColor" id="select-color" placeholder="Выберите цвет" onblur="selectClose(this)">
-					<div class="option-group column">
-						<div class="option">синий</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
-						<div class="option">Имя 2</div>
+					<div class="option-group column" id="colors">
+
 					</div>
 				</div>
 			</label>
