--- a/public/product-list-log.html
+++ b/public/product-list-log.html
@@ -114,9 +114,9 @@
 
 	<div class="pop-wrap buyer-class column" id="buyer_guest">
 		<h2>Отсавьте заявку</h2>
-		<form method="post" class="column" name="guest-form">
+		<form method="post" class="column" name="guest-form" action="/order">
 			<input type="text" name="guest_name" value="" placeholder="Введите свое имя">
-			<input type="text" name="guset_surname" value="" placeholder="Введите свою фамилию">
+			<input type="text" name="guest_surname" value="" placeholder="Введите свою фамилию">
 			<input type="text" name="guest_fathername" value="" placeholder="Введите свое отчество">
 			<input type="text" name="guest_phone" value="" placeholder="8 (917) 222 22 22">
 			<input type="submit" name="guest_send" value="Отправить">
