--- a/public/profile-company.html
+++ b/public/profile-company.html
@@ -47,7 +47,7 @@
 			</form>
 		</div>
 
-		<div class="list-wrap column">
+		<div class="list-wrap column" id="history">
 			<h2>История заказов</h2>
 			<div class="row">
 				<span>Марка полимера</span>
