--- a/public/admin-profile.html
+++ b/public/admin-profile.html
@@ -25,7 +25,7 @@
 	<div class="main-wrap column">
     <div class="list-wrap column">
       <h2>Изменить процент</h2>
-      <form class="put-add column" method="post" name="admin">
+      <form class="put-add column" method="post" id="admin" action="/control">
         <input type="text" name="procent" value="" placeholder="Введите новый процент">
         <span class="alert"></span>
         <div class="btn-wrap">
