--- a/public/header.html
+++ b/public/header.html
@@ -1,5 +1,5 @@
 <div class="title column">
-  <a href="/"><h2>LogicSySKartli</h2></a>
+  <a href="/"><h2>SystemKartli</h2></a>
   <span>Биржа Полимеров</span>
 </div>
 
