--- a/public/login-header.html
+++ b/public/login-header.html
@@ -1,5 +1,5 @@
 <div class="title column">
-  <a href="/products"><h2>LogicSySKartli</h2></a>
+  <a href="/products"><h2>SystemKartli</h2></a>
   <span>Биржа полимеров</span>
 </div>
 
@@ -11,7 +11,7 @@
     <span onclick="dropProfile('.profile')">Личный кабинет</span>
     <div class="profile column" onmouseleave="hideProfile('.profile')">
         <span id="bank"></span>
-        <button>Настройки</button>
+        <button onclick="adminHref()">Настройки</button>
         <button type="submit" onclick="LogOut()">Выход</button>
     </div>
   </div>
