--- a/public/home.html
+++ b/public/home.html
@@ -41,7 +41,7 @@
 		<div class="pop-wrap column" id="auto">
 			<h2>Авторизация</h2>
 			<form method="post" class="column" name="login" action="/login">
-				<input type="text" name="username" placeholder="Введите имя">
+				<input type="text" name="username" placeholder="Введите почту">
 				<input type="password" name="password" placeholder="Введите пароль" >
 				<span class="alert"></span>
 				<label>
@@ -55,7 +55,7 @@
 		<div class="pop-wrap column" id="reg" name="sign-up">
 			<h2>Регистрация</h2>
 			<form method="post" class="column" name="sign-up" action="/signup" >
-				<input type="text" name="username" placeholder="Введите имя" id="sign-up-login">
+				<input type="text" name="username" placeholder="Введите почту" id="sign-up-login">
 				<input type="password" name="password" placeholder="Введите пароль" id="sign-up-pass">
 				<span class="alert"></span>
 				<input type="submit" name="signUp" value="Зарегистрироваться">
